# g2labs-message-bus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
platform/x64/: CMakeLists.txt  main.c
src/: CMakeLists.txt  message_bus.c  message_bus.h
